# iEffect-image-pipeline

./: .clang-format  CMakeLists.txt  README.md  env.sh.in  ieffect
src/: CMakeLists.txt  ieffect.c  image.c  list.c  list.h  pipeline.c  pipeline.h  processing.c  processing.h  utils.c
test/: CMakeLists.txt  test_pipeline.cpp
